...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Comics are this way!-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Comics are this way!" id="RMx-3f-FxP" customClass="StatusBarStyleDelegatingNavigationController" customModule="xkcdbrowser" customModuleProvider="target" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="7bK-jq-Zjz" kind="relationship" relationship="rootViewController" id="tsl-Nk-0bq"/>
...
                        <connections>
                            <outletCollection property="gestureRecognizers" destination="0qv-Wy-Z1o" appends="YES" id="dL2-M1-tY4"/>
                            <outletCollection property="gestureRecognizers" destination="1KR-wk-WZd" appends="YES" id="eIj-KD-KhN"/>
                        </connections>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="No Comic Selected" id="mOI-FS-AaM">
                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="n2g-xx-69n">
                            <connections>
                                <action selector="shareAction:" destination="JEX-9P-axG" id="hhN-Kk-QNO"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
